apps/cuneiform/service.yml
apiVersion: v1
kind: Service
metadata:
  name: cuneiform-service
  namespace: galaxy
spec:
  selector:
    name: cuneiform
  ports:
    - name: http
      protocol: TCP
      port: 8200
      targetPort: 8200
    - name: cluster
      protocol: TCP
      port: 8201
      targetPort: 8201
