apps/cuneiform/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cuneiform-ingress
  namespace: galaxy
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: galaxy-redirect-https@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: cuneiform.pinwheel.fan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cuneiform-service
                port:
                  number: 8200
  tls:
    - secretName: cuneiform-tls
      hosts:
        - cuneiform.pinwheel.fan
